welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:3: error: not found: value R
	if (litMessage() == R) {droite();avance();}
                            ^BDRBuggle:4: error: not found: value L
if (litMessage() == L) {gauche();avance();}
                    ^BDRBuggle:5: error: not found: value I
if (litMessage() == I) {retourne();avance();}
                    ^BDRBuggle:6: error: not found: value A
if (litMessage() == A) {avance();}
                    ^BDRBuggle:7: error: not found: value B
if (litMessage() == B) {avance();avance();}
                    ^BDRBuggle:8: error: not found: value C
if (litMessage() == C) {avance();avance();avance();}
                    ^BDRBuggle:9: error: not found: value Z
if (litMessage() == Z) {recule();}
                    ^BDRBuggle:10: error: not found: value Y
if (litMessage() == Y) {recule();recule();}
                    ^BDRBuggle:11: error: not found: value X
if (litMessage() == X) {recule();recule();recule();}
                    ^